--- a/QA_Health_Switcheroo_500_300x600/sass/style.scss
+++ b/QA_Health_Switcheroo_500_300x600/sass/style.scss
@@ -176,7 +176,7 @@ h4 {
 
 #messaging-frame-02 {
     position: absolute;
-    z-index: 200;
+    z-index: 100000000000000;
     width: 260px;
     top: 30px;
     left: 20px;
@@ -511,7 +511,14 @@ h4 {
 
 .bg-image-02 {
     position: absolute;
-    z-index: 131;
+    z-index: 130;
+}
+
+.flip {
+  transform-origin: 50% 50%;
+  transform-style: preserve-3d;
+  width: 300px;
+  height: 600px;
 }
 
 .clicktag {
