--- a/QA_Health_Switcheroo_50_728x90/sass/style.scss
+++ b/QA_Health_Switcheroo_50_728x90/sass/style.scss
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /* CSS Document */
 @import "normalize";
-$width: 300;
-$height: 600;
+$width: 728;
+$height: 90;
 $bannerWidth: $width + px;
 $bannerHeight: $height + px;
 @font-face {
@@ -60,6 +60,7 @@ span {
     -webkit-margin-after: 0;
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
+    margin: 0;
 }
 
 button {
@@ -71,14 +72,14 @@ button {
     -webkit-border-radius: 26px;
     -moz-border-radius: 26px;
     border-radius: 26px;
-    padding: 7px 18px 4px;
-    font-size: 17px;
-    line-height: 21px;
+    padding: 8px 20px 7px;
+    font-size: 15px;
+    line-height: 17px;
     outline: none;
 }
 
-button:hover,
-button.hover {
+button.hover,
+button:hover {
     background: white;
     color: #ee0000;
 }
@@ -112,8 +113,8 @@ h4 {
 
 .container {
     display: none;
-    width: ($width)+px;
-    height: ($height)+px;
+    width: ($width - 2)+px;
+    height: ($height - 2)+px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -122,8 +123,8 @@ h4 {
 .loader {
     margin-left: auto;
     margin-right: auto;
-    width: 298px;
-    height: 598px;
+    width: 726px;
+    height: 88px;
     top: 0;
     left: 0;
     border: 1px solid #e2e2e2;
@@ -132,10 +133,19 @@ h4 {
 
 .loader img {
     position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 275px;
-    left: 125px;
+    top: 23px;
+    left: 344px;
+}
+
+.grey-border {
+    position: absolute;
+    width: 726px;
+    height: 88px;
+    top: 0;
+    left: 0;
+    border: 1px solid #e2e2e2;
+    z-index: 8000;
+    pointer-events: none;
 }
 
 .banner {
@@ -146,263 +156,239 @@ h4 {
     left: 0;
     margin: 0 auto;
     background-color: #F5F5F5;
-    clip: rect(0px, 300px, $bannerHeight, 0px);
+    clip: rect(0px, 728px, $bannerHeight, 0px);
     overflow: hidden;
     border: 1px solid #e2e2e2;
 }
-
+// Copy
 .frame-content p {
-    font-size: 37px;
-    line-height: 37px;
-    text-align: center;
+    font-size: 24px;
+    line-height: 1.1;
     color: white;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    margin-top: 0;
 }
 
-#messaging-frame-01 {
+.subtext {
+    position: absolute;
+    font-size: 16px;
+    line-height: 16px;
+    text-align: center;
+    color: white;
+    top: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+#messaging-frame-01, #messaging-frame-02 {
     position: absolute;
     z-index: 200;
-    width: 260px;
-    top: 30px;
-    left: 20px;
-    p {
-      font-size:35px;
-      line-height:37px;
-      -webkit-font-smoothing: antialiased;
-    }
+    width: 270px;
+    top: 20px;
+    left: 232px;
+    text-align: center;
 }
 
 #messaging-frame-02 {
-    position: absolute;
-    z-index: 200;
-    width: 260px;
-    top: 30px;
-    left: 20px;
-    p {
-        font-size: 35px;
-        line-height:37px;
-        -webkit-font-smoothing: antialiased;
-    }
-}
+  top:30px;
 
-.flip {
-  transform-origin: 50% 50%;
-  transform-style: preserve-3d;
-  width: 300px;
-  height: 600px;
+  .switcheroo-text {
+    display: inline-block;
+  }
 }
 
 #messaging-frame-03 {
-  position: absolute;
-  z-index: 200;
-  width: 100%;
-  top: 60px;
-  p {
-    font-size: 30px;
-    line-height: 107px;
-    -webkit-font-smoothing: antialiased;
-  }
-  .qantas-points {
-    font-size: 30px;
-    -webkit-font-smoothing: initial;
     position: absolute;
-    width: 100%;
-    left: 0;
-    top: 110px;
-    line-height: 3px;
-    text-align: center;
-  }
+    z-index: 200;
+    width: 600px;
+    top: 12px;
+    left: 20px;
+    text-align: left;
 
-  .points-value {
-    font-size: 60px;
-    line-height: 1.7;
-  }
-
-  .asterix-points {
-      display: inline;
+    p {
       font-size: 18px;
-      position: relative;
-      bottom: 10px;
-      right: 0px;
-  }
-  .thousands-countdown,
-  .hundreds-countdown {
-      display: inline;
-  }
-  .thousands-countdown {
-      position: absolute;
-      text-align: right;
-      // right: 149px;
-      right: -69px;
-  }
-  .hundreds-countdown {
-      position: absolute;
-      text-align: left;
-      // left: 122px;
-      left: 82px;
-  }
-  .comma-countdown {
-      position: absolute;
-      display: inline;
-      // right: 139px;
-      right: -81px;
-  }
+      line-height: 27px;
+      color: #fff;
+      text-rendering: optimizeLegibility;
+    }
+
+    span.qantas-points {
+      display: inline-block;
+      font-size: 28px;
+      width: 728px;
+    }
+
+    span.points-value {
+      display: inline-block;
+      font-size: 38px;
+      font-weight: 600;
+    }
+
+    .asterix-points {
+      display: inline-block;
+    }
 }
 
 #messaging-end-frame {
     position: absolute;
     z-index: 200;
-    width: 260px;
-    top: 130px;
+    width: 600px;
+    top: 29px;
     left: 20px;
     color: white;
+
     p {
-        -webkit-font-smoothing: antialiased;
-        font-size:42px;
+      font-size: 30px;
+      margin-left: 10px;
     }
 }
-
-#messaging-endframe {
-    position: absolute;
-    z-index: 200;
-    width: 280px;
-    top: 150px;
-    left: 10px;
-    color: white;
-    p {
-        font-size: 35px;
-        line-height:37px;
-        -webkit-font-smoothing: antialiased;
-    }
-}
-
-.messaging-bracket {
-    font-size: 13px;
-    color:#ffffff;
-    position:absolute;
-    left:67px;
-    margin-top:7px;
-}
-
-
-.tilde {
-    font-family: 'Ciutadella-Regular';
-    display: inline-block;
-    font-size: 18px;
-    position: absolute;
-    top:28px;
-}
-
-.plus-terms {
-    position: absolute;
-    font-size: 14px;
-    right:66px;
-    bottom:9px;
-}
-
-.end-bracket {
-  position:relative;
-  display: inline-block;
-  right:-9px;
-}
-
 // LOGOS
 #logos-container {
     position: absolute;
     z-index: 200;
-    left: 3px;
-    bottom: 85px;
+    right: 147px;
+    top: 21px;
+}
+
+.qantas-logo-mono {
+    position: absolute;
+    z-index: 190;
+    width: 121px;
+    height: 24px;
+    left: 0;
+    top: 4px;
 }
 
 .qantas-logo-colour {
     position: absolute;
-    width: 130px;
+    z-index: 191;
+    width: 121px;
     height: 35px;
-    left: 5px;
-    top: 1px;
-    z-index: 301;
-}
-
-.qantas-logo-white {
-    position: absolute;
-    width: 190px;
-    height: 50px;
     left: 0;
-    top: 0;
-    z-index: 300;
+    top: 4px;
 }
 
 .partner-logo {
     position: absolute;
-    height: 30px;
-    width: 96px;
-    left: 159px;
-    top: 15px;
-    overflow: hidden;
+    top: -37px;
+    left: 14px;
+    z-index: 400;
+    width: 93px;
+    height: 40px;
 }
 
-.card {
+.oneworld-logo {
     position: absolute;
-    width: 100px;
-    left: 80px;
-    top: -73px;
+    width: 24px;
+    left: 136px;
+    top: 4px;
 }
 
 #cta-button {
     position: absolute;
     display: block;
-    left: 62px;
-    margin-top: 30px;
-    z-index: 300;
+    left: 280px;
+    top: -2px;
+}
+//PRICING FRAME
+.pricing {
+    position: relative;
+    display: inline-block;
+    height: 100%;
+    overflow: hidden;
 }
 
-.logo-divider-line {
+#from {
+    position: relative;
+    display: block;
+    margin-bottom: 2px;
+    font-family: 'Ciutadella-Regular';
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 13px;
+    text-align: left;
+    /*    -webkit-font-smoothing: antialiased; */
+}
+
+#destination {
+    position: relative;
+    display: block;
+    font-size: 32px;
+    line-height: 32px;
+    font-family: 'Ciutadella-Medium';
+    text-align: left;
+    -webkit-font-smoothing: antialiased;
+}
+
+#destination-lockup {
+    position: relative;
+    display: inline-block;
+}
+
+#price-left-copy {
+    position: relative;
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 5px;
+    font-family: Arial, sans-serif;
+    font-weight: 300;
+    font-size: 11px;
+    line-height: 11px;
+    letter-spacing: 1px;
+    text-align: left;
+}
+
+#price-right-copy {
+    position: relative;
+    display: inline-block;
+    margin-left: 10px;
+    font-family: Arial, sans-serif;
+    font-weight: 300;
+    font-size: 11px;
+    line-height: 11px;
+    letter-spacing: 1px;
+    text-align: left;
+}
+
+#price {
+    position: relative;
+    display: inline-block;
+    font-family: 'Ciutadella-Medium';
+    font-size: 36px;
+    color: #fff;
+    text-align: center;
+    z-index: 7000;
+    -webkit-font-smoothing: antialiased;
+}
+
+#asterix-char {
     position: absolute;
-    width: 1px;
-    height: 35px;
-    left: 147px;
-    top: 9px;
-    background-color: #000000;
+    top: 3px;
+    font-family: 'Ciutadella-Medium';
+    font-size: 16px;
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
 }
 
 .terms {
     display: block;
     position: absolute;
     z-index: 8001;
-    width: 288px;
+    width: 600px;
     text-align: left;
-    letter-spacing: -0.4px;
-    left: 5px;
-    color: #787878;
-    bottom: 6px;
+    left: 10px;
+    bottom: 4px;
     font-size: 9px;
-    line-height: 9px;
+    color: white;
+    line-height: 10px;
     font-family: Arial, sans-serif;
     cursor: pointer;
-    // font-weight: bold;
 }
 
-.tilde-terms {
-  position:relative;
-  bottom:2px;
-  display:inline-block;
-}
-
-.asterisk {
-    font-family: 'Ciutadella-Regular';
-    display: inline-block;
-    font-size: 18px;
-    position: absolute;
-    top:27px;
-}
-
-// Intro Shapes
 .shapes {
     position: absolute;
-    top: 150px;
-    left: 0;
+    top: -80px;
+    left: 200px;
     width: 300px;
     height: 250px;
     z-index: 6500;
@@ -436,87 +422,100 @@ h4 {
     z-index: 6900;
 }
 
-// Base Shapes
+#white-shape-small {
+    position: absolute;
+    z-index: 112;
+    left: 230px;
+    top: -280px;
+    width: 838px;
+    height: 462px;
+}
+
 #base-red {
     position: absolute;
     z-index: 105;
     left: 0;
     top: 0;
-    width: 300px;
-    height: 600px;
-}
-
-#partnership-white-shape-small {
-    position: absolute;
-    z-index: 112;
-    left: -310px;
-    top: 392px;
-    width: 838px;
-    height: 462px;
-}
-
-#partnership-white-shape {
-    position: absolute;
-    z-index: 112;
-    left: -137px;
-    top: 272px;
-    width: 530px;
-    height: 400px;
+    width: 728px;
+    height: 90px;
 }
 
 #red-gradient {
     position: absolute;
-    z-index: 100;
-    left: 0;
+    z-index: 111;
+    left: 300px;
     top: 0;
     width: 838px;
     height: 462px;
+}
+
+#text-base-shape,
+#text-base-shape2 {
+    position: absolute;
+    z-index: 110;
+    left: 300px;
+    top: 0;
+    width: 838px;
+    height: 462px;
+}
+#text-base-shape2 {
+    // transform: rotate(104deg) scale(.8);
+    top: -232px;
+    left: -57px;
+    position: absolute;
+    z-index: 110;
 }
 
 #solid-red-base {
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 600px;
+    width: 728px;
+    height: 90px;
     background-color: #d00914;
     z-index: 0;
 }
-
-.copy-gradient {
-    position: absolute;
-    width: 300px;
-    height: 600px;
-    z-index: 110;
-    top: 0;
-    left: 0;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+29,000000+29,000000+29,000000+29,000000+29,000000+100&0+0,0.35+25,0.35+32,0+100 */
-    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.35) 25%, rgba(0,0,0,0.35) 29%, rgba(0,0,0,0.35) 32%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 25%,rgba(0,0,0,0.35) 29%,rgba(0,0,0,0.35) 32%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 25%,rgba(0,0,0,0.35) 29%,rgba(0,0,0,0.35) 32%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
-
+// Base Images
+// BG IMAGE FLIP
+.bg-Wrapper{
+  width:728px;
+  height:90px;
+  position:relative;
+  /*background-color:#333;*/
+  // float:left;
+  // margin-right:10px;
+  // cursor:pointer;
+  -webkit-font-smoothing:antialiased;
 }
 
-// Base Images
+.flip {
+  transform-origin: 50% 50%;
+  transform-style: preserve-3d;
+  width: 728px;
+  height: 90px;
+}
+
 .bg-image {
     position: absolute;
-    width: 300px;
-    height: 600px;
+    width: 728px;
+    height: 90px;
     top: 0;
     left: 0;
     margin: auto;
     z-index: 100;
 }
 
+
 .bg-image-01 {
     position: absolute;
     z-index: 130;
+    width:720px;
 }
 
 .bg-image-02 {
     position: absolute;
     z-index: 131;
+    width:720px;
 }
 
 .clicktag {
@@ -525,10 +524,10 @@ h4 {
 
 .overlay {
     position: absolute;
-    width: 260px;
-    height: 570px;
-    top: 10px;
-    left: 10px;
+    width: 700px;
+    height: 72px;
+    top: 4px;
+    left: 4px;
     background-color: white;
     z-index: 9999;
     padding-top: 10px;
@@ -544,21 +543,20 @@ h4 {
 
 .overlay-close {
     position: absolute;
-    cursor: pointer;
     right: 0;
     top: 0;
     width: 30px;
-    height: 33px;
+    height: 30px;
+    cursor: pointer;
 }
 
 .overlay-close img {
     width: 10px;
     height: 10px;
     position: absolute;
-    top: 12px;
     left: 10px;
+    top: 8px;
 }
-
 .overlay-close:hover img {
     width: 10px;
     height: 10px;
@@ -570,35 +568,14 @@ h4 {
     padding-top: 8px;
     font-family: 'Ciutadella-Regular';
     line-height: 14px;
-    max-height: 534px;
+    max-height: 38px;
     overflow-y: scroll;
 }
 
-@-moz-document url-prefix() {
-  .plus-terms {
-     bottom:40px;
-  }
-  .qantas-points-copy {
-    position:relative;
-    bottom:27px;
-  }
-  .asterisk {
-    top:-4px;
-  }
-}
-
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    .qantas-points-copy {
-      position:relative;
-      bottom:28px;
-    }
-    .asterisk {
-      top:-5px;
-    }
-    #cta-button {
-      margin-top:-3px;
-    }
-    .plus-terms {
-        bottom:43px;
-    }
+.asterix {
+    font-family: 'Ciutadella-Regular';
+    display: inline-block;
+    font-size: 18px;
+    position: absolute;
+    top: 0;
 }
